# codeforce-codes

./: .clang-format  CMakeLists.txt
binary_cut/: main.cpp
circle_perimeter/: main.cpp
clock_string/: main.cpp
coinflip/: main.cpp
contest_proposal/: main.cpp
diagonals/: main.cpp
maximize_the_root/: main.cpp
